feat(lock controller): add pin authentication

--- a/Firmware/LockController/ESP32/platformio.ini
+++ b/Firmware/LockController/ESP32/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+
+build_flags = 
+    -D LOCK_PIN=\"12345678\"    ; Please change to something unique (you can also use letters instead of numbers)
