--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -37,10 +37,13 @@ dependencies:
 
   dynamic_color: ^1.7.0
   permission_handler: ^11.3.1
+  # shared_preferences: ^2.5.1
+  native_shared_preferences: ^2.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
