feat(lock controller): change code to works with servo
Code to move a servo that then moves the locking leaver in the drivers door

--- a/Firmware/LockController/ESP32/platformio.ini
+++ b/Firmware/LockController/ESP32/platformio.ini
@@ -12,7 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-
-
 build_flags = 
-    -D LOCK_PIN=\"12345678\"    ; Please change to something unique (you can also use letters instead of numbers)
+	-D LOCK_PIN=\"12345678\"
+lib_deps = madhephaestus/ESP32Servo@^3.0.6
