feat(mobile app): background service test

--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   dynamic_color: ^1.7.0
   shared_preferences: ^2.5.2
   flutter_blue_plus: ^1.35.3
+  flutter_background_service: ^5.1.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
