--- a/MobileApp/android/app/src/main/AndroidManifest.xml
+++ b/MobileApp/android/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name="id.flutter.flutter_background_service.BackgroundService"
+            android:foregroundServiceType="connectedDevice"
+            />
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
