--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_blue_plus: ^1.35.3
   flutter_background_service: ^5.1.0
   flutter_local_notifications: ^18.0.1
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
