--- a/Firmware/LockController/ESP32/platformio.ini
+++ b/Firmware/LockController/ESP32/platformio.ini
@@ -16,3 +16,4 @@ framework = arduino
 
 build_flags = 
     -D LOCK_PIN=\"12345678\"    ; Please change to something unique (you can also use letters instead of numbers)
+    -D DEVICE_NAME=\"ESP32_Lock\"    ; Display name of the device
