--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_background_service: ^5.1.0
   flutter_local_notifications: ^18.0.1
   vibration: ^3.1.3
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
