--- a/MobileApp/android/app/src/main/AndroidManifest.xml
+++ b/MobileApp/android/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.software.companion_device_setup"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:label="Open Car Key"
