--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   vibration: ^3.1.3
   permission_handler: ^11.4.0
+  image_picker: ^1.1.2
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
