--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   vibration: ^3.1.3
   permission_handler: ^11.4.0
   image_picker: ^1.1.2
+  crop_image: ^1.0.16
   path: ^1.9.1
   path_provider: ^2.1.5
 
