--- a/MobileApp/android/app/build.gradle
+++ b/MobileApp/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     namespace = "com.smartify_os.open_car_key_app"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
         // Flag to enable support for the new language APIs
