feat(lock controller): add debug mode option to toggle serial debug messages

--- a/Firmware/LockController/platformio.ini
+++ b/Firmware/LockController/platformio.ini
@@ -17,3 +17,4 @@ framework = arduino
 build_flags = 
     -D LOCK_PIN=\"12345678\"    ; Please change to something unique (you can also use letters instead of numbers)
     -D DEVICE_NAME=\"ESP32_Lock\"    ; Display name of the device
+    -D DEBUG_MODE=false    ; Enable to get debug messages via serial
