--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path: ^1.9.1
   path_provider: ^2.1.5
   home_widget: ^0.8.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
