--- a/MobileApp/pubspec.yaml
+++ b/MobileApp/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   home_widget: ^0.8.0
   url_launcher: ^6.3.2
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
