--- a/Firmware/LockController/platformio.ini
+++ b/Firmware/LockController/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = madhephaestus/ESP32Servo@^3.0.6
+
 build_flags = 
     -D PASSWORD=\"abcdefghij123\"    ; Please change to something unique (can also be longer)
     -D DEVICE_NAME=\"ESP32_Lock\"    ; Display name of the device
