--- a/Firmware/LockController/platformio.ini
+++ b/Firmware/LockController/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = madhephaestus/ESP32Servo@^3.0.6
+lib_deps = madhephaestus/ESP32Servo@3.0.6 ; Was broken on newest version (3.0.8) so limit to 3.0.6
 
 build_flags = 
     -D PASSWORD=\"abcdefghij123\"    ; Please change to something unique (can also be longer)
